@@ -459,6 +459,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Introduce new flag 'R' - raw output for language variant escape tags
 * Advise users when updates for a query page have been disabled using
   $wgDisableQueryPageUpdate
+* (bug 8413) better comments for $wgNamespaceRobotPolicies setting.
 
 == Languages updated ==
 
